tests/ui/const-generics/assoc-const-projection/feature-gate-c1-without-gate.stderr
error[E0658]: associated const projections in const arguments are experimental
  --> $DIR/feature-gate-c1-without-gate.rs:12:30
   |
LL | struct Buf<T: HasLen>([u8; { <T as HasLen>::N }]);
   |                              ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(const_generics_assoc_consts)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
